@@ -348,11 +348,13 @@ class UploadWidget(QtWidgets.QWidget):
             "\n\n".join(messages),
         )
 
-    def stop_timers(self):
+    def prepare_quit(self):
         """Should be called before the application quits"""
         self.init_timer.stop()
         if self.widget_jobs.timer is not None:
             self.widget_jobs.timer.stop()
+        if self._jobs is not None:
+            self._jobs.__del__()
 
 
 class UploadTableWidget(QtWidgets.QTableWidget):
