@@ -1,7 +1,6 @@
 import pathlib
 import shutil
 import tempfile
-import time
 from unittest import mock
 
 import uuid
@@ -42,7 +41,6 @@ def mw(qtbot):
     # Make sure that all daemons are gone
     mw.close()
     # It is extremely weird, but this seems to be important to avoid segfaults!
-    time.sleep(1)
     QtTest.QTest.qWait(100)
     QtWidgets.QApplication.processEvents(QtCore.QEventLoop.AllEvents, 5000)
 
@@ -86,7 +84,6 @@ def test_gui_anonymous(qtbot):
         spath.unlink()
         shutil.copy2(stmp, spath)
     mw.close()
-    time.sleep(1)
     QtTest.QTest.qWait(500)
     QtWidgets.QApplication.processEvents(QtCore.QEventLoop.AllEvents, 500)
 
